# bilet

./: README.md  angular.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/app/components/help/: help.component.css  help.component.html  help.component.ts
src/app/components/notepad/: notepad.component.css  notepad.component.html  notepad.component.ts
src/app/components/pad-close-modal/: pad-close-modal.component.css  pad-close-modal.component.html  pad-close-modal.component.ts
src/app/components/search/: search.component.css  search.component.html  search.component.ts
src/app/components/settings-modal/: settings-modal.component.css  settings-modal.component.html  settings-modal.component.ts
src/app/components/splash/: splash.component.css  splash.component.html  splash.component.ts
src/app/components/tasks/: tasks.component.css  tasks.component.html  tasks.component.ts
src/app/components/titlebar/: titlebar.component.css  titlebar.component.html  titlebar.component.ts
src/app/components/vault/: vault.component.css  vault.component.html  vault.component.ts
src/app/models/: app.models.ts  interfaces.ts
src/app/services/: bin.service.ts  font.service.ts  notepad.service.ts  notes.service.ts  pads.service.ts  search.service.ts  settings.service.ts  tauri.service.ts  vault.service.ts
