[package]
name = "bilet"
version = "1.2.0"
description = "A clean desk for your thoughts and code."
authors = ["Habrmnc <habeebrahmanca07@gmail.com>"]
edition = "2021"

[lib]
name = "bilet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1.7.0"
once_cell = "1.19.0"
hex = "0.4"
base64 = "0.22.1"
thiserror = "1.0"
aes-gcm = "0.10.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-updater = "2.10.0"
